--- a/SE_rashadulIslam.html
+++ b/SE_rashadulIslam.html
@@ -557,8 +557,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <thead>
 <tr>
 <th class="tableblock halign-left valign-top">DESIGNATION</th>
-<th class="tableblock halign-left valign-top">ORGANIZATION, EMPLOYEMENT TYPE</th>
-<th class="tableblock halign-left valign-top">SKILLS</th>
+<th class="tableblock halign-left valign-top">ORGANIZATION</th>
+<th class="tableblock halign-left valign-top">EMPLOYEMENT TYPE</th>
 <th class="tableblock halign-left valign-top">GEO LOCATION</th>
 <th class="tableblock halign-left valign-top">YEAR</th>
 </tr>
@@ -566,127 +566,138 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Translator</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">A renouned NGO, Part time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">English to Bangla, Bangla to English</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A renouned NGO</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Part time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Dhaka, Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">December 2015 - current</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: English to Bangla, Bangla to English</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">ICT teacher and Digital Transformation Executive</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Haattimaateam Child Care Home and Pre School, Part time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Haattimaateam Child Care Home and Pre School</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Part time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Winter 2019 - Winter 2022</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Digital Transformation Engineer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Counselling, Consultancy</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Counselling</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Consultancy</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2008 - current</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Full-stack DevOP</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Developer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Contractual</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Html5, CSS, JavaScript (React, jQuery), node.js, ajax, npm, Spring Framework, Python, R, Lisp, Ç++, Ç, Perl, SQL, MySQL, MariaDb, PostgreSQL, Oracle, Docker, Git, Jenkins, Asana, bugzilla, Amazon Web Services, Google Cloud, Microsoft Azure, RESTful APIs, microservice architecture, UI/UX design, UML, Specifications, Creativity, Large Problem Solving Skills, SDLC, Strategic Planning, Critical Thinking, Analytical skills, Time Management, Communication, Attention to Details, OOP, Adaptability, New Changeset, Requirement  Engineering, APIs, Cross Platform, Compatiblity, CI/CD Pipelines, Kubernetics, Scrum, Kanban, Unit testing, Typescript</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh - Canada</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">June 2003 - Current</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Html5, CSS, JavaScript (React, jQuery), node.js, ajax, npm, Spring Framework, Python, R, Lisp, Ç++, Ç, Perl, SQL, MySQL, MariaDb, PostgreSQL, Oracle, Docker, Git, Jenkins, Asana, bugzilla, Amazon Web Services, Google Cloud, Microsoft Azure, RESTful APIs, microservice architecture, UI/UX design, UML, Specifications, Creativity, Large Problem Solving Skills, SDLC, Strategic Planning, Critical Thinking, Analytical skills, Time Management, Communication, Attention to Details, OOP, Adaptability, New Changeset, Requirement  Engineering, APIs, Cross Platform, Compatiblity, CI/CD Pipelines, Kubernetics, Scrum, Kanban, Unit testing, Typescript</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Visiting Lecturer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Primeasia Univetsity, Full time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">University Teaching, University Relations, Academic Administration, Lesson Planning, Academic Coordinator, Examination Invigilator, Student Counseling, Academic Advising, Career Counseling, Business Advisory Services, Management Information Systems (MIS), Enterprise Resource Planning (ERP), Logistics Management, Software Project Management, Software Requirements Engineering, IT Infrastructure Design, IT Department Management, Digital Transformation</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Primeasia Univetsity</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">December 2009 - December 2012</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: University Teaching, University Relations, Academic Administration, Lesson Planning, Academic Coordinator, Examination Invigilator, Student Counseling, Academic Advising, Career Counseling, Business Advisory Services, Management Information Systems (MIS), Enterprise Resource Planning (ERP), Logistics Management, Software Project Management, Software Requirements Engineering, IT Infrastructure Design, IT Department Management, Digital Transformation</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Consulting Analyst and TechOps</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">S.F. Ahmed &amp; Co., Contractual</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Business Intelligence (BI), Business Development, Strategic Planning, Economic Data Analysis, Research, Analytical and Interpretation, Data Analysis, Financial Analysis, Search Engine Optimization (SEO), Chartered Financial Analysis, Systems Analysis, Project Bidding, Bid Strategy, Real-Time Bidding (RTB), Project Management, Software Project Management, Algorithmic Trading, Market Research, Survey</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">S.F. Ahmed &amp; Co.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Contractual</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">December 2011 - December 2024</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Business Intelligence (BI), Business Development, Strategic Planning, Economic Data Analysis, Research, Analytical and Interpretation, Data Analysis, Financial Analysis, Search Engine Optimization (SEO), Chartered Financial Analysis, Systems Analysis, Project Bidding, Bid Strategy, Real-Time Bidding (RTB), Project Management, Software Project Management, Algorithmic Trading, Market Research, Survey</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Chief Global Relation &amp; Operation Executive</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">QUEST Consultancy, Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Communication, Cross-cultural management, Teamwork, Analysis, Negotiation, Autonomy, Problem-solving, Planning and project management, Customer Engagement, Principles and Business Growth, Interpersonal Skills, Social EQ, Crowd Sourcing</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">QUEST Consultancy</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sep 2016 - Sep 2023</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Communication, Cross-cultural management, Teamwork, Analysis, Negotiation, Autonomy, Problem-solving, Planning and project management, Customer Engagement, Principles and Business Growth, Interpersonal Skills, Social EQ, Crowd Sourcing</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Technical Review Writer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Contractual, Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Contractual</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">August 2011 - September 2020</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Organizer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">First convocation, Primeasia University, Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">First convocation, Primeasia University</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Winter 2010</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Visiting Trainer [Funded by JICA]</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh Computer Council, Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh Computer Council</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Summer 2010</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Mentor, Business Development</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">RDGB, Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">RDGB</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">January 2009 - January 2023</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Organizer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">BASIS Soft Expo 2011, Full-time</p></td>
-<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">BASIS Soft Expo 2011</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Winter 2011</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Career Counselor</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">ECA Concordia, IUB, Full-time</p></td>
-<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ECA Concordia, IUB</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Canada, Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2004 - Fall 2008</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SoD and Counselor</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Registrar&#8217;s Office, Dean of Admissions, Financial Aid Office, Independent University, Full-time</p></td>
-<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Registrar&#8217;s Office, Dean of Admissions, Financial Aid Office, Independent University</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Spring 2001 - Summer 2003</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Artificially Intelligent System Developer &amp; Insight Interpreter</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">The media venture, Associate</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Media Relations, Team Collaboration, Social Media Marketing, E-commerce Content Development and SEO, Search Engine Optimization (SEO), User Interface Design, User Experience Design (UED), UX Research, Consumer Behavior, Retail Consumer Insight, Business Insights, Machine Learning, Prediction, Sales Strategic, Public Relations, Event Planning, Public Opinion Research, Public Relations, Statistical Data Analysis, Data Modeling, Oracle Database, LLM, ML Model</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The media venture</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Associate</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2023 - current</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Creative Writer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">The Media Venture, Associate</p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Summer 2006 - Current</p></td>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Media Relations, Team Collaboration, Social Media Marketing, E-commerce Content Development and SEO, Search Engine Optimization (SEO), User Interface Design, User Experience Design (UED), UX Research, Consumer Behavior, Retail Consumer Insight, Business Insights, Machine Learning, Prediction, Sales Strategic, Public Relations, Event Planning, Public Opinion Research, Public Relations, Statistical Data Analysis, Data Modeling, Oracle Database, LLM, ML Model</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Author (Technological Fiction)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Engineering Magazine, ECA, Concordia University, Volunteer</p></td>
-<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Engineering Magazine, ECA, Concordia University</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Volunteer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Canada</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2003 - Current</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Ambassador, Fedora project</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Open source community project under Red hat, Volunteer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">-</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Open source community project under Red hat</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Volunteer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">OS Community</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2005 - Current</p></td>
 </tr>
@@ -1255,7 +1266,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-26 18:24:08 UTC
+Last updated 2024-11-26 20:20:22 UTC
 </div>
 </div>
 </body>
