--- a/SE_rashadulIslam.html
+++ b/SE_rashadulIslam.html
@@ -434,36 +434,34 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="article toc2 toc-right">
+<body class="article">
 <div id="header">
 <h1>RASHADUL ISLAM</h1>
-<div id="toc" class="toc2">
-<div id="toctitle">Contents</div>
-<ul class="sectlevel1">
-<li><a href="#_latest_picture">Latest picture:</a></li>
-<li><a href="#_personal_details">Personal Details</a></li>
-<li><a href="#_work_experience">Work experience</a></li>
-<li><a href="#_projects">Projects</a></li>
-<li><a href="#_academic_details">Academic details</a></li>
-<li><a href="#_achievements_awards">Achievements &amp; Awards</a></li>
-<li><a href="#_professional_certification">Professional certification</a></li>
-<li><a href="#_skills_of_rashadul_islam">Skills of Rashadul Islam</a></li>
-<li><a href="#_language_proficiency">Language proficiency</a></li>
-<li><a href="#_author">Author</a></li>
-<li><a href="#_programming_languages_tools">Programming languages &amp; tools</a></li>
-<li><a href="#_interests">Interests</a></li>
-<li><a href="#_contact_information">Contact Information</a></li>
-</ul>
-</div>
 </div>
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
-<div class="admonitionblock caution">
+<div class="admonitionblock note">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-caution" title="Caution"></i>
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="title">Degree</div>
+<div class="paragraph">
+<p>B.Sc in CSE,CSC
+Bangladesh - Canada</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
 <div class="title">Specialization</div>
@@ -474,16 +472,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 </table>
 </div>
-<div class="admonitionblock important">
+<div class="admonitionblock note">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-important" title="Important"></i>
+<i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
 <div class="title">Expertise</div>
 <div class="paragraph">
-<p>Software Engineering, Full-stack DevOp, Associate Consultant: IT-Infrastructure-ICT, Coach: Entrepreneur, Business development mentor, Consulting Big Data Analyst, Artificial Intelligence &amp; Nanotechnology, Algorithm Design, Product or Service Ecosystem Designer, Organization Branding &amp; Policy Designer, Open Source Ambassador, Keynote Speaker, Translator, Student &amp; Career Counselor, Creative writer</p>
+<p>Software Engineering, Full-stack DevOps, Associate Consultant: IT-Infrastructure-ICT, Coach: Entrepreneur, Business development mentor, Consulting Big Data Analyst, Artificial Intelligence &amp; Nanotechnology, Algorithm Design, Product or Service Ecosystem Designer, Organization Branding &amp; Policy Designer, Open Source Ambassador, Keynote Speaker, Translator, Student &amp; Career Counselor, Creative writer</p>
 </div>
 </td>
 </tr>
@@ -496,7 +494,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sectionbody">
 <div class="imageblock">
 <div class="content">
-<img src="https://raw.githubusercontent.com/impactLens/cvOfRashadul/refs/heads/main/RashadulIslam.jpg" alt="Rashadul Islam" width="30%" height="30%">
+<img src="https://raw.githubusercontent.com/impactLens/cvOfRashadul/refs/heads/main/RashadulIslam.jpg" alt="Rashadul Islam" width="15%" height="15%">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -558,7 +556,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <th class="tableblock halign-left valign-top">DESIGNATION</th>
 <th class="tableblock halign-left valign-top">ORGANIZATION</th>
-<th class="tableblock halign-left valign-top">EMPLOYEMENT TYPE</th>
+<th class="tableblock halign-left valign-top">EMPLOYMENT TYPE</th>
 <th class="tableblock halign-left valign-top">GEO LOCATION</th>
 <th class="tableblock halign-left valign-top">YEAR</th>
 </tr>
@@ -566,7 +564,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Translator</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">A renouned NGO</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A renowned NGO</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Part time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Dhaka, Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">December 2015 - current</p></td>
@@ -589,18 +587,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">2008 - current</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Full-stack DevOP</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Full-stack DevOps</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Developer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Contractual</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh - Canada</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">June 2003 - Current</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Html5, CSS, JavaScript (React, jQuery), node.js, ajax, npm, Spring Framework, Python, R, Lisp, Ç++, Ç, Perl, SQL, MySQL, MariaDb, PostgreSQL, Oracle, Docker, Git, Jenkins, Asana, bugzilla, Amazon Web Services, Google Cloud, Microsoft Azure, RESTful APIs, microservice architecture, UI/UX design, UML, Specifications, Creativity, Large Problem Solving Skills, SDLC, Strategic Planning, Critical Thinking, Analytical skills, Time Management, Communication, Attention to Details, OOP, Adaptability, New Changeset, Requirement  Engineering, APIs, Cross Platform, Compatiblity, CI/CD Pipelines, Kubernetics, Scrum, Kanban, Unit testing, Typescript</p></td>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Html5, CSS, JavaScript (React, jQuery), node.js, ajax, npm, Spring Framework, Python, R, Lisp, C++, C, Perl, SQL, MySQL, MariaDB, PostgreSQL, Oracle, Docker, Git, Jenkins, Asana, bugzilla, Amazon Web Services, Google Cloud, Microsoft Azure, RESTful APIs, microservice architecture, UI/UX design, UML, Specifications, Creativity, Large Problem Solving Skills, SDLC, Strategic Planning, Agile Development, Critical Thinking, Analytical skills, Time Management, Communication, Attention to Details, OOP, Adaptability, New Changeset, Requirement  Engineering, APIs, Cross Platform, CI/CD Pipelines, kubernetes, Scrum, Kanban, Unit testing, Typescript</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Visiting Lecturer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Primeasia Univetsity</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Primeasia University</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Full time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">December 2009 - December 2012</p></td>
@@ -685,7 +683,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">2023 - current</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Media Relations, Team Collaboration, Social Media Marketing, E-commerce Content Development and SEO, Search Engine Optimization (SEO), User Interface Design, User Experience Design (UED), UX Research, Consumer Behavior, Retail Consumer Insight, Business Insights, Machine Learning, Prediction, Sales Strategic, Public Relations, Event Planning, Public Opinion Research, Public Relations, Statistical Data Analysis, Data Modeling, Oracle Database, LLM, ML Model</p></td>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Media Relation, Team Collaboration, Social Media Marketing, E-commerce Content Development, Search Engine Optimization (SEO), User Interface Design, User Experience Design (UED), UX Research, Consumer Behavior, Retail Consumer Insight, Business Insights, Machine Learning, Prediction, Sales Strategic, Event Planning, Public Opinion Research, Public Relation, Statistical Data Analysis, Data Modeling, Oracle Database, LLM, ML Model</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Author (Technological Fiction)</p></td>
@@ -703,7 +701,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 </tbody>
 </table>
-<div style="page-break-after: always;"></div>
 </div>
 </div>
 <div class="sect1">
@@ -750,7 +747,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">CMMI level 5, PMMI level 5</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">iSalesEngine POS and Retail Management System &amp; Analytic Developer (Using J2EE, J2SE, C++, Python, Oracle, SQL, Docker, Kubernet, Apache Tomcat, Responsive HTML5, CSS, LISP)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">iSalesEngine POS and Retail Management System &amp; Analytic Developer (Using J2EE, J2SE, C++, Python, Oracle, SQL, Docker, Kubernetes, Apache Tomcat, Responsive HTML5, CSS, LISP)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Software Product of Quest Consultancy</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Estimated 42240 hours</p></td>
@@ -779,7 +776,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Real-time Product Recommending Chatbot</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Sponsored by a wholesale wirehouse or Retail business</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sponsored by a wholesale warehouse and Retail business</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Contractual</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Estimated 20000 hours</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">CMMI level 5, PMMI level 5</p></td>
@@ -800,6 +797,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 </tbody>
 </table>
+<div style="page-break-after: always;"></div>
 </div>
 </div>
 <div class="sect1">
@@ -828,7 +826,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">B.Sc. in CSE</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Software Engineering ( 2nd undergraduate )</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Software Engineering</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2018 - Fall 2020</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">CGPA: 3.74 out of 4.0</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">IBAIS University</p></td>
@@ -836,7 +834,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">B.Sc. in Computer Science</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">System Software ( 1st undergraduate )</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">System Software</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2003 - Fall 2008</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">CGPA: 3.10 out of 4.0</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Concordia University</p></td>
@@ -876,7 +874,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 </tbody>
 </table>
-<div style="page-break-after: always;"></div>
 </div>
 </div>
 <div class="sect1">
@@ -970,17 +967,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock">
 <div class="content">
-<img src="https://raw.githubusercontent.com/impactLens/cvOfRashadul/refs/heads/main/skillsRoss.png" alt="Revised skillset" width="85%;height=85%">
+<img src="https://raw.githubusercontent.com/impactLens/cvOfRashadul/refs/heads/main/skillsRoss.png" alt="Revised skillset" width="75%;height=75%">
 </div>
 </div></div></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock">
 <div class="content">
-<img src="https://raw.githubusercontent.com/impactLens/cvOfRashadul/refs/heads/main/itCantBeTaught.png" alt="Strong Subjective Understanding" width="85%" height="85%">
+<img src="https://raw.githubusercontent.com/impactLens/cvOfRashadul/refs/heads/main/itCantBeTaught.png" alt="Strong Subjective Understanding" width="75%" height="75%">
 </div>
 </div></div></td>
 </tr>
 </tbody>
 </table>
+<div style="page-break-after: always;"></div>
 </div>
 </div>
 <div class="sect1">
@@ -1023,7 +1021,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 </tbody>
 </table>
-<div style="page-break-after: always;"></div>
 </div>
 </div>
 <div class="sect1">
@@ -1078,7 +1075,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">J2SE</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">J2EE</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Mariadb</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MariaDB</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MySQL</p></td>
@@ -1148,7 +1145,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">IoS</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MacOS</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Android</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Amazon AWS</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Raspberry pi</p></td>
@@ -1157,7 +1154,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Open shift</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Kubernetic</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Kubernetes</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bugzilla</p></td>
 </tr>
 <tr>
@@ -1256,6 +1253,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">House 13, Road 1, Mahadebpur (Noorpur), Alamnagar,  Rangpur 5402, Bangladesh</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Residence:</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">House 202/A, Road 6, Floor 4, Mahammadi Housing Limited, Dhaka 1207, Bangladesh</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Postal Address:</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">House 62, Floor 5, Siddique Bazar,  Near Moti Shardar Mosque,  Bangshal Thana, Dhaka 1100, Bangladesh</p></td>
 </tr>
@@ -1266,7 +1267,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-26 20:20:22 UTC
+Last updated 2024-12-26 10:22:02 UTC
 </div>
 </div>
 </body>
