--- a/SE_rashadulIslam.html
+++ b/SE_rashadulIslam.html
@@ -580,11 +580,17 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Winter 2019 - Winter 2022</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Early Childhood Education, Child Development, Classroom Management, Communication &amp; Collaboration, Inquiry-Based Learning, Technology Integration, Science Concepts, Math Concepts, Engineering Principles, Literacy Integration, Social-Emotional Learning, Learning through Recreation</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Digital Transformation Engineer</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Personal contract</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Counselling</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Consultancy</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2008 - current</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Strategic Planning and Execution, Technical and Digital Literacy, Change Management and Organizational Leadership, Data-Driven Decision Making, Customer Experience and Design Thinking, Cybersecurity and Information Security, Business Process Automation and Robotic Process Automation (RPA), Enterprise Resource Planning (ERP) Systems, Customer Relationship Management (CRM) Systems, Internet of Things (IoT) Technologies, DevOps and Continuous Integration/Continuous Deployment (CI/CD), Customer-Centric Mindset, Leadership and Influence, Learning Agility, Resilience and Stress Management, Systems Thinking and Integration, Advanced Analytics and Machine Learning, Customer Experience (CX) Innovation, Cloud Computing and Platform Expertise, Software Project Management, Cybersecurity and Risk Management, Collaborative Leadership, Emerging Technologies, Digital Marketing</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Full-stack DevOps</p></td>
@@ -634,25 +640,7 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">August 2011 - September 2020</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Organizer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">First convocation, Primeasia University</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Winter 2010</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Visiting Trainer [Funded by JICA]</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh Computer Council</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Summer 2010</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Mentor, Business Development</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">RDGB</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">January 2009 - January 2023</p></td>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Technical Writing, Technical Editing, Proofreading, Documentation, Editing, Writing, Reviewing, Analysis, Quality Assurance, Communication, Collaboration, Attention to Detail, Problem-Solving, Time Management, Project Management, Software Documentation, User Manuals, Technical Specifications, API Documentation, Style Guides, XML, HTML, Markdown, Version Control, Agile Methodologies, Software Development Lifecycle</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Organizer</p></td>
@@ -662,11 +650,7 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Winter 2011</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Career Counselor</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">ECA Concordia, IUB</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Canada, Bangladesh</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2004 - Fall 2008</p></td>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Event Planning &amp; Coordination, Logistics Management, Teamwork &amp; Collaboration, Communication &amp; Interpersonal Skills, Time Management &amp; Prioritization, Problem-Solving &amp; Decision-Making, Leadership &amp; Initiative, Attention to Detail, Resource Management, Stakeholder Management, Public Relations &amp; Protocol, Crisis Management, Negotiation &amp; Conflict Resolution, Asyncronud Messenger</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SoD and Counselor</p></td>
@@ -674,6 +658,9 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Spring 2001 - Summer 2003</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Leadership, Teamwork, Communication, Organization, Time Management, Initiative, Responsibility, Attention to Detail, Dean&#8217;s Appointment Service, Conflict Resolution, Adaptability, Multitasking, Registration Management, Student Support, Student Financial Aid, Student Advisor Selection, Student File Management &amp; Maintaining Archieve, Event Planning, School Rules Knowledge, Public Speaking, Mentoring, Creative Problem Solving, Conflict De-escalation, Cultural Sensitivity, Emotional Intelligence, Growth Mindset, Resourcefulness, Critical Thinking, Decision Making, Public Relations, Community Engagement</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Artificially Intelligent System Developer &amp; Insight Interpreter</p></td>
@@ -693,11 +680,17 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2003 - Current</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Book Writing, Creative Writing, Science Fiction, World-Building, Character Development, Theory into Practice using Plot, Technology Forecasting, Conceptualization, Storytelling, Editing &amp; Proofreading, Marketing, Self-Discipline</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Ambassador, Fedora project</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Open source community project under Red hat</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Volunteer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">OS Community</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fall 2005 - Current</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Community Building, Sponsorship, Public Speaking, Event Planning, Outreach &amp; Engagement, Technical Communication, Mentorship, Contributor Management, Advocacy, Marketing &amp; Promotion, Social Media Management, Open Source Collaboration, Technical Expertise (Fedora/Linux), Cross-Cultural Communication</p></td>
 </tr>
 </tbody>
 </table>
@@ -1267,7 +1260,7 @@ Bangladesh - Canada</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-12-26 10:22:02 UTC
+Last updated 2024-12-31 19:03:38 UTC
 </div>
 </div>
 </body>
