--- a/SE_rashadulIslam.html
+++ b/SE_rashadulIslam.html
@@ -603,6 +603,16 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Html5, CSS, JavaScript (React, jQuery), node.js, ajax, npm, Spring Framework, Python, R, Lisp, C++, C, Perl, SQL, MySQL, MariaDB, PostgreSQL, Oracle, Docker, Git, Jenkins, Asana, bugzilla, Amazon Web Services, Google Cloud, Microsoft Azure, RESTful APIs, microservice architecture, UI/UX design, UML, Specifications, Creativity, Large Problem Solving Skills, SDLC, Strategic Planning, Agile Development, Critical Thinking, Analytical skills, Time Management, Communication, Attention to Details, OOP, Adaptability, New Changeset, Requirement  Engineering, APIs, Cross Platform, CI/CD Pipelines, kubernetes, Scrum, Kanban, Unit testing, Typescript</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Assistant Data Analyst</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Regional Development Group</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Contractual</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">September 2016 - September 2021</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Decision Science and Management, Data Validation, Data Processing, Data Cleaning, Choosing Right Data, Insight Designer, BI Dashboard Design and Dev, Statistical Programming, Social Research Methodology, Python, R, Gnu PSPP, Gnu Octave, Microsoft Excel, Statistics, Economics, Algebra, Calculus, SQL, MySQL, MariaDb, PostgreSQL, D3.js, Right Charts and Graphs, Audience, Requirement Analysis, Econometrics, Data Modelling, Large Language Model, Automate Data and Results Interpretation, Change Management, Role Based Authority, Story telling, Team-Driven Asynchronous Strategy Finding</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Visiting Lecturer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Primeasia University</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Full time</p></td>
@@ -621,16 +631,6 @@ Bangladesh - Canada</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Business Intelligence (BI), Business Development, Strategic Planning, Economic Data Analysis, Research, Analytical and Interpretation, Data Analysis, Financial Analysis, Search Engine Optimization (SEO), Chartered Financial Analysis, Systems Analysis, Project Bidding, Bid Strategy, Real-Time Bidding (RTB), Project Management, Software Project Management, Algorithmic Trading, Market Research, Survey</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Chief Global Relation &amp; Operation Executive</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">QUEST Consultancy</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Full-time</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bangladesh</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Sep 2016 - Sep 2023</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top" colspan="5"><p class="tableblock"><strong>Skill</strong>: Communication, Cross-cultural management, Teamwork, Analysis, Negotiation, Autonomy, Problem-solving, Planning and project management, Customer Engagement, Principles and Business Growth, Interpersonal Skills, Social EQ, Crowd Sourcing</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Technical Review Writer</p></td>
@@ -1041,7 +1041,7 @@ Bangladesh - Canada</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Preemptive Algorithm: Systemic Schedule in Workflow Development</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SaaS, PaaS, IaaS Infrastructure &amp; Algorithm Design: Optimized Sensors, IoT and Machine Learning models integration</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Optimization in SaaS, PaaS, IaaS Infrastructure &amp; Algorithm Design: Optimized Sensors, IoT and Machine Learning models integration</p></td>
 </tr>
 </tbody>
 </table>
@@ -1243,10 +1243,6 @@ Bangladesh - Canada</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Residence:</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">House 13, Road 1, Mahadebpur (Noorpur), Alamnagar,  Rangpur 5402, Bangladesh</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Residence:</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">House 202/A, Road 6, Floor 4, Mahammadi Housing Limited, Dhaka 1207, Bangladesh</p></td>
 </tr>
 <tr>
@@ -1260,7 +1256,7 @@ Bangladesh - Canada</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-12-31 19:03:38 UTC
+Last updated 2025-01-19 16:47:14 UTC
 </div>
 </div>
 </body>
